--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Aditya Rana blog
 email: adityassrana2@gmail.com
 description: ""
 baseurl: "/blog"
-url: "https://adityassrana.github.io/blog/"
+url: "https://adityassrana.github.io"
 twitter_username: adityassrana
 github_username:  adityassrana
 
