--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Aditya Rana blog
 email: adityassrana2@gmail.com
 description: ""
-baseurl: "/blog"
+baseurl: "/old_blog_template"
 url: "https://adityassrana.github.io"
 twitter_username: adityassrana
 github_username:  adityassrana
